project is completed and code is uploaded

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>movie Search app</title>
-    <link rel="stylesheet" href="index.cssg" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1 id="App_title">Movie Match Search</h1>
